tests/example-projects/failing/no-test/src/EmptyPlaceholderModule.elm
module EmptyPlaceholderModule exposing (why)


why : Int
why =
    42
